--- a/home.html
+++ b/home.html
@@ -1,16 +1,15 @@
 <html>
 <head>
+  <link href="../DWA/style.css" rel = "stylesheet" type="text/css" >
 </head>
 <body>
-<div class="dropdown">
-  <button class="mainmenubtn">Main Menu</button>
-  <div class="dropdown-child">
-    <a href="http://wwww.tudominio.com/page1.html">Sub Menu 1</a>
-    <a href="http://wwww.tudominio.com/page2.html">Sub Menu 2</a>
-    <a href="http://wwww.tudominio.com/page3.html">Sub Menu 3</a>
-    <a href="http://wwww.tudominio.com/page4.html">Sub Menu 4</a>
-    <a href="http://wwww.tudominio.com/page5.html">Sub Menu 5</a>
-  </div>
-</div>
-</body>
+		<div id="header">
+			<ul class="nav">
+				<li><a href="">Inicio</a></li>
+				<li><a href="">Servicios</a>
+				</li>
+				<li><a href="">Contacto</a></li>
+			</ul>
+		</div>
+	</body>
 </html>
