--- a/registration.html
+++ b/registration.html
@@ -1,11 +1,10 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<meta charset=utf-8">
   <link href="../DWA/style.css" rel = "stylesheet" type="text/css" >
   <title >
-	HOME
-</title>
+      REGISTRATION
+  </title>
 </head>
 <body>
 		<div id="header">
