--- a/registration.html
+++ b/registration.html
@@ -9,13 +9,40 @@
 <body>
 		<div id="header">
 			<ul class="nav">
-				<li><a href="../DWA/home.html">Home</a>
-					
+				<li><a href="../DWA/home.html">Home</a>	
 				</li>
 				<li><a href="../DWA/catalogue.html">Catalogue</a>
 				</li>
-				<li><a href="../DWA/registration.html">Registration</a></li>
+				<li><a href="../DWA/registration.html">Registration</a>          
+                </li>
 			</ul>
 		</div>
+        <div class ="content">
+            <h1 class ="logo">Sign<span>Up</span></h1>
+            <div class= "contact-wrapper">
+                <div class= "contact-form">
+                    <h3>Sing Up</h3>
+                    <form action =" ">
+                        <p>
+                            <label for ="fullname">Full Name</label>
+                            <input type="text" name ="fullname" id="fullname">
+                        </p>
+                        <p>
+                            <label>Email</label>
+                            <input type="email" name ="email">
+                        </p>
+                        <p>
+                            <label>Phone</label>
+                            <input type="text" name="phone">
+                        </p>
+                        <p>
+                            <button type="submit">
+                                Submit
+                            </button>
+                        </p>
+                    </form> 
+                </div>
+            </div>
+        </div>
 	</body>
 </html>
