--- a/catalogue.html
+++ b/catalogue.html
@@ -5,6 +5,34 @@
   <title >
       CATALOGUE
   </title>
+  <script>
+    function readData(){
+        var textName = document.getElementById("fullname").value;
+        var textEmail = document.getElementById("email").value;
+        var textPhone = document.getElementById("phone").value;
+        var textDate = document.getElementById("date").value;
+        if(checkEmail(textEmail) && checkPhone(textPhone) && checkPhone(textPhone))
+        {
+            alert("Your information is correct");
+        } else {
+            alert("Your information is wrong");
+        }
+    }
+    function checkNumber(price){
+        const regex = /^[0-9]*$/;
+        return regex.test(price);
+    }
+    function checkName(name){
+        const regex = /^[0-9]*$/;
+        if(regex.test(name)){
+            return false;
+        }else if( name.lenght != 10){
+            return false;
+        }else{
+            return true;
+        }
+    }
+  </script>
 
 </head>
 <body>
@@ -18,5 +46,40 @@
 				<li><a href="../DWA/registration.html">Registration</a></li>
 			</ul>
 		</div>
+        <div class ="content">
+            <h1 class ="logo">Sign<span>Up</span></h1>
+            <div class= "contact-wrapper">
+                <div class= "contact-form">
+                    <h3>Sing Up</h3>
+                    <form action =" ">
+                        <p>
+                            <label for ="fullname">Select Course</label>
+                            <select name="courses" id="courses">
+                                <option value="First Aid">First Aid</option>
+                                <option value="Mathematics">Mathematics</option>
+                                <option value="Programming">Programming</option>
+                            </select>
+                        </p>
+                        <p>
+                            <label>City</label>
+                            <input type="text" name ="city"  placeholder="Quito" id="city">
+                        </p>
+                        <p>
+                            <label>Price</label>
+                            <input type="text" name="price" placeholder="200" id="price">
+                        </p>
+                        <p>
+                            <label>Description</label>
+                            <input type="text" name="description" id="description">
+                        </p>
+                        <p class="block">
+                            <button type="submit" onclick="readData()">
+                                Submit
+                            </button>
+                        </p>
+                    </form> 
+                </div>
+            </div>
+        </div>
 	</body>
 </html>
