--- a/catalogue.html
+++ b/catalogue.html
@@ -7,26 +7,24 @@
   </title>
   <script>
     function readData(){
-        var textName = document.getElementById("fullname").value;
-        var textEmail = document.getElementById("email").value;
-        var textPhone = document.getElementById("phone").value;
-        var textDate = document.getElementById("date").value;
-        if(checkEmail(textEmail) && checkPhone(textPhone) && checkPhone(textPhone))
+        var textCourse = document.getElementById("courses").value;
+        var textCity = document.getElementById("city").value;
+        var prices = document.getElementById("price").value;
+        var textDescription = document.getElementById("description").value;
+        if(checkText(textCity) && checkNumber(prices) && checkText(textDescription))
         {
-            alert("Your information is correct");
+            alert("The information is correct");
         } else {
-            alert("Your information is wrong");
+            alert("The information is wrong");
         }
     }
     function checkNumber(price){
         const regex = /^[0-9]*$/;
         return regex.test(price);
     }
-    function checkName(name){
+    function checkText(name){
         const regex = /^[0-9]*$/;
         if(regex.test(name)){
-            return false;
-        }else if( name.lenght != 10){
             return false;
         }else{
             return true;
