--- a/registration.html
+++ b/registration.html
@@ -11,7 +11,7 @@
         var textEmail = document.getElementById("email").value;
         var textPhone = document.getElementById("phone").value;
         var textDate = document.getElementById("date").value;
-        if(checkEmail(textEmail) && checkPhone(textPhone) && checkPhone(textPhone))
+        if(checkEmail(textEmail) && checkPhone(textPhone) && checkName(textName))
         {
             alert("Your information is correct");
         } else {
