--- a/catalogue.html
+++ b/catalogue.html
@@ -45,10 +45,10 @@
 			</ul>
 		</div>
         <div class ="content">
-            <h1 class ="logo">Sign<span>Up</span></h1>
+            <h1 class ="logo">Catalogue<span></span></h1>
             <div class= "contact-wrapper">
                 <div class= "contact-form">
-                    <h3>Sing Up</h3>
+                    <h3>Catalogue</h3>
                     <form action =" ">
                         <p>
                             <label for ="fullname">Select Course</label>
@@ -64,7 +64,7 @@
                         </p>
                         <p>
                             <label>Price</label>
-                            <input type="text" name="price" placeholder="200" id="price">
+                            <input type="number" name="price" placeholder="200" id="price">
                         </p>
                         <p>
                             <label>Description</label>
